feat: add GeminiProvider and associated tests for Gemini API integration

--- a/test/embedded/secrets.h.example
+++ b/test/embedded/secrets.h.example
@@ -5,5 +5,6 @@
 #define TEST_WIFI_PASS "your-wifi-password"
 #define TEST_OPENAI_KEY "sk-..."
 #define TEST_ANTHROPIC_KEY "sk-ant-..."
+#define TEST_GEMINI_KEY "AIza..."
 
 #endif
