--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=ESPAI
 version=0.7.0
 author=enkei0x
 maintainer=enkei0x
-sentence=Bring GPT and Claude AI to your ESP32 projects!
-paragraph=Lightweight AI client with streaming responses, function calling (tool use), and conversation memory. Build voice assistants, smart home controllers, and AI-powered IoT devices. Supports OpenAI GPT-4 and Anthropic Claude with unified API.
+sentence=Bring GPT, Claude, and Gemini AI to your ESP32 projects!
+paragraph=Lightweight AI client with streaming responses, function calling (tool use), and conversation memory. Build voice assistants, smart home controllers, and AI-powered IoT devices. Supports OpenAI GPT-4, Anthropic Claude, and Google Gemini with unified API.
 category=Communication
 url=https://github.com/enkei0x/espai
 architectures=esp32
