feat: Add async support for AIProvider and enhance error handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,18 @@ build_flags =
 lib_deps =
     ${common.lib_deps}
 
+[env:esp32s2]
+platform = espressif32
+board = lolin_s2_mini
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+build_flags =
+    ${common.build_flags}
+    -D ARDUINO_ESP32S2_DEV
+lib_deps =
+    ${common.lib_deps}
+
 [env:esp32c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
