--- a/library.properties
+++ b/library.properties
@@ -6,6 +6,6 @@ sentence=Bring GPT, Claude, and Gemini AI to your ESP32 projects!
 paragraph=Lightweight AI client with streaming responses, function calling (tool use), and conversation memory. Build voice assistants, smart home controllers, and AI-powered IoT devices. Supports OpenAI GPT-4, Anthropic Claude, and Google Gemini with unified API.
 category=Communication
 url=https://github.com/enkei0x/espai
-architectures=esp32
+architectures=esp32,esp32s2,esp32s3,esp32c3
 includes=ESPAI.h
 depends=ArduinoJson (>=7.4.0)
