feat: Implement FreeRTOS mock and add async test cases for AIClient

--- a/platformio.ini
+++ b/platformio.ini
@@ -122,7 +122,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 test_framework = unity
 test_filter = embedded/*
-test_ignore = native/*
+test_ignore = native/* native_async/*
 build_flags =
     ${common.build_flags}
     -D ESPAI_DEBUG=1
@@ -133,3 +133,26 @@ lib_deps =
     throwtheswitch/Unity@^2.6.0
 lib_ignore = Unity_examples
 monitor_speed = 115200
+
+[env:native_async]
+platform = native
+build_flags =
+    -std=c++17
+    -Wall
+    -Wextra
+    -Wno-unused-parameter
+    -D NATIVE_TEST
+    -D UNIT_TEST
+    -D ESPAI_ENABLE_ASYNC=1
+    -I src
+    -I src/core
+    -I src/providers
+    -I test/unity_config
+    -I test/mocks/freertos
+lib_deps =
+    throwtheswitch/Unity@^2.6.0
+    bblanchon/ArduinoJson@^7.4.0
+lib_ignore = Unity_examples
+test_framework = unity
+test_build_src = yes
+test_filter = native_async/*
